Fixed alignment?

--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -73,7 +73,11 @@
     transition: background-color 0.1s;
     transition: border 0.1s;
 }
-
+#button-row {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
 #login-form-elements button:hover {
     background-color: rgba(255,255,255,0.2);
 }
